--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,9 +8,11 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@style/Theme.Connect4" >
         <activity
             android:name=".Connect4"
+            android:theme="@style/Theme.Connect4.Home"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
